# jr-portfolio-projects

./: .dockerignore  .gitignore  Dockerfile  Makefile  Makefile.dev  README  README.md  docker-entrypoint.sh  lightsail.json.template  requirements.txt
gateway/: asgi_dispatcher.py  host_router.py  main.py
scripts/: deploy_lightsail.sh  generate_lightsail_json.sh
services/ai-agent-smart-thermostat/: app.py  pyproject.toml
services/ai-agent-smart-thermostat/src/thermostat_agent/: __init__.py
services/ai-agent-smart-thermostat/templates/: index.html
services/ai-claude-code-sp/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  summary.md
services/ai-claude-code-sp/app/: globals.css  layout.tsx
services/ai-clinical-trial-evaluator/: .gitignore  docker-compose.yml
services/ai-clinical-trial-evaluator/backend/: ai_eligibility.py  app.py  requirements.txt
services/ai-fx-insights/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
services/ai-resume-job-analyzer/: .gitignore  Dockerfile  README.md  app.py  lightsail.yaml
services/clinical-trial-matching-agent/: README.md
services/clinical_trial_evaluator/: Dockerfile  README_NOTE.txt  service.py
services/fx_insights/: package.json  run_local.sh  service.py  setup_local.sh
services/resume_job_analyzer/: app.py  deploy.sh  requirements.txt  service.py
services/semantic_patient_search/: Dockerfile  README.md  __init__.py  package.json  run_local.sh  service.py  setup_local.sh
services/smart_thermostat/: README.md  requirements.txt  service.py
(+278 files in other folders)
