[project]
name = "ai-agent-smart-thermostat"
version = "0.1.0"
description = "Rule-based thermostat agent with configurable rules, logging, tests, and external weather API integration."
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.1",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "responses>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
